--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div class="box1">
-    <!-- Box 1 -->
-    <div class="box2">Box 2</div>
-  </div>
+  <h1>見出し</h1>
+  <p><img src="img/logo.png" width="100" height="100">こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！</p>
+
   
-  <div class="box3">Box 3</div>
-  <div class="box3">Box 3</div>
-  <div class="box3">Box 3</div>
+  <h2>見出し</h2>
+  <p>こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！こんにちは！</p>
 </body>
 </html>
